--- a/timeline.html
+++ b/timeline.html
@@ -7,11 +7,17 @@
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
-            background-color: #f5f5f5;
+            font-family: "Microsoft Yahei", sans-serif;
+            background-image: url('background.3.jpg');
+            background-size: cover;
+            background-attachment: fixed;
             margin: 0;
             padding: 0;
+        }
+        .container {
             display: flex;
-            justify-content: space-between;
+            width: 100%;
+            height: 100vh;
         }
 
         /* 左侧时间线 */
@@ -172,9 +178,9 @@
 
     <!-- 索引模块 -->
     <div class="index">
-        <a href="#timeline">时间线</a>
-        <a href="#阿湛">阿湛自我介绍</a>
-        <a href="#泉泉">泉泉自我介绍</a>
+     <a href="pomodoro.html">番茄钟</a>
+        <a href="profile.html">个人主页</a>
+        <a href="notebook.html">记录本</a>
     </div>
 </body>
 </html>
